--- a/Vistas/estilos.css
+++ b/Vistas/estilos.css
@@ -1,8 +1,103 @@
-﻿.form-container {
-    border: 4px solid #007BFF; 
-    border-radius: 15px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    padding: 20px; /* espacio interno */
-    width: 300px;
-    display: inline-block; /* que se ajuste al contenido */
+﻿body {
+    margin: 0;
+    height: 100vh;
 }
+
+.login {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: white;
+    height: calc(100vh - 100px); /* restamos la altura del navbar */
+    display: flex;
+    background: #3497F966;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar {
+    position: relative;
+    height: 100px;
+    padding: 0 32px;
+    display: flex;
+    z-index: 20;
+    gap: 5px;
+    align-items: center;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
+    .navbar h2 {
+        font-family: 'Yeseva One', serif;
+        font-size: 30px;
+        color: #1F2B86;
+        margin: 0;
+    }
+
+    .navbar img {
+        width: 80px;
+        height: auto;
+    }
+
+.login-container {
+    background-color: #fff;
+    padding: 20px 50px 30px 50px;
+    border-radius: 8px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    width: 100%;
+    max-width: 400px;
+}
+
+    .login-container h2 {
+        text-align: center;
+        font-family: "Work Sans", sans-serif;
+        margin-bottom: 35px;
+        font-weight: 700;
+        color: #1F2B86;
+    }
+
+.form-group {
+    margin-bottom: 30px;
+}
+
+label {
+    display: block;
+    font-weight: 600;
+    margin-bottom: 6px;
+    color: #444;
+}
+
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px 14px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+.btn-login {
+    width: 100%;
+    padding: 12px;
+    margin-top: 25px;
+    background-color: #159EEC;
+    border: none;
+    font-family: "Work Sans", sans-serif;
+    border-radius: 6px;
+    color: #fff;
+    font-weight: 500;
+    cursor: pointer;
+    font-size: 18px;
+    transition: background 0.3s ease;
+}
+
+    .btn-login:hover {
+        background-color: #117FBF;
+    }
+
+.error {
+    color: red;
+    font-size: 13px;
+    margin-top: 8px;
+    text-align: center;
+}
+
