icons added to the sidebar

--- a/Vistas/styles.css
+++ b/Vistas/styles.css
@@ -9,13 +9,14 @@ body {
     background-color: cornflowerblue;
 }
 
-/* Contenedor general con flex */
+
 .container {
     display: flex;
     height: 100vh;
+    width: 100%;
 }
 
-/* Sidebar */
+
 .sidebar {
     width: 200px;
     background-color: #fff;
@@ -55,6 +56,8 @@ body {
 }
 
 .menu-item {
+    display: flex;
+    align-items: center;
     font-size: 18px;
     font-weight: bold;
     text-decoration: none;
@@ -62,7 +65,19 @@ body {
     padding: 10px;
     border-radius: 6px;
     transition: background-color 0.3s;
+
 }
+
+    .menu-item img.icon-left {
+        width: 20px;
+        height: 20px;
+        object-fit: contain;
+        display: inline-block;
+        vertical-align: middle;
+        position: relative;
+        gap: 16px;
+        top: 0px; 
+    }
 
     .menu-item:hover,
     .menu-item.active {
@@ -91,6 +106,7 @@ body {
     padding: 30px;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
 }
 
 .header {
@@ -106,3 +122,6 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     flex: 1;
 }
+
+
+
