start of turnos.aspx

--- a/Vistas/styles.css
+++ b/Vistas/styles.css
@@ -73,7 +73,7 @@ body {
         height: 20px;
         object-fit: contain;
         display: inline-block;
-        vertical-align: middle;
+        vertical-align: initial;
         position: relative;
         gap: 16px;
         top: 0px; 
