--- a/Vistas/Admin_style.css
+++ b/Vistas/Admin_style.css
@@ -33,6 +33,7 @@ body {
     display: flex;
     z-index: 20;
     gap: 5px;
+    margin-bottom: 10px;
     align-items: center;
 }
 
@@ -52,7 +53,6 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: 40px;
 }
 
 .menu-item {
@@ -68,15 +68,12 @@ body {
 
 }
 
-    .menu-item img.icon-left {
+    .menu-item .icon-left {
         width: 20px;
         height: 20px;
         object-fit: contain;
-        display: inline-block;
-        vertical-align: initial;
         position: relative;
-        gap: 16px;
-        top: 0px; 
+        margin-right: 10px;
     }
 
     .menu-item:hover,
@@ -86,7 +83,8 @@ body {
     }
 
 .logout {
-    font-size: 18px;
+    display: flex;
+    align-items: center;
     font-weight: bold;
     margin-top: auto;
     color: #333;
@@ -94,7 +92,17 @@ body {
     border-radius: 6px;
     transition: background-color 0.3s;
     padding: 10px;
+    gap: 10px;
 }
+
+    .logout .icon-left {
+        width: 20px;
+        color: red;
+        height: 20px;
+        object-fit: contain;
+        position: relative;
+        margin-right: 10px;
+    }
 
     .logout:hover {
         color: red;
