--- a/Vistas/Login_style.css
+++ b/Vistas/Login_style.css
@@ -1,4 +1,5 @@
 ﻿body {
+    background-color: cornflowerblue;
     margin: 0;
     height: 100vh;
 }
@@ -6,10 +7,9 @@
 .login {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: white;
     height: calc(100vh - 100px); /* restamos la altura del navbar */
     display: flex;
-    background: #3497F966;
+    color: #3497F966;
     align-items: center;
     justify-content: center;
 }
@@ -23,6 +23,7 @@
     gap: 5px;
     align-items: center;
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    background: white;
 }
 
     .navbar h2 {
@@ -33,17 +34,18 @@
     }
 
     .navbar img {
-        width: 80px;
+        width: 40px;
         height: auto;
     }
 
 .login-container {
-    background-color: #fff;
+
     padding: 20px 50px 30px 50px;
     border-radius: 8px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     width: 100%;
     max-width: 400px;
+    background: white;
 }
 
     .login-container h2 {
