--- a/Vistas/Medicos/medicos_style.css
+++ b/Vistas/Medicos/medicos_style.css
@@ -35,6 +35,12 @@ body {
         margin: 0;
     }
 
+    .navbar h3 {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
     .navbar img {
         width: 40px;
         height: auto;
