--- a/Vistas/Admin_style.css
+++ b/Vistas/Admin_style.css
@@ -82,32 +82,6 @@ body {
         color: #187bcd;
     }
 
-.logout {
-    display: flex;
-    font-size: 14px;
-    align-items: center;
-    font-weight: bold;
-    margin-top: auto;
-    cursor: pointer;
-    border-radius: 6px;
-    transition: background-color 0.3s;
-    padding: 10px;
-    gap: 5px;
-}
-
-    .logout .icon-left {
-        width: 20px;
-        color: red;
-        height: 20px;
-        object-fit: contain;
-        position: relative;
-        margin-right: 10px;
-    }
-
-    .logout:hover {
-        color: red;
-        background-color: rgba(255, 0, 0, 0.2);
-    }
 
 .main-content {
     flex: 1;
@@ -162,5 +136,68 @@ header {
     flex: 1;
 }
 
+/*--- POP UP STYLE ----*/
 
+.modalBackground {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1000;
+    gap: 15px;
+}
 
+.confirm-button, .cancel-button{
+    font-size: 14px;
+    font-weight: bold;
+    margin: 20px 5px 0 5px;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: background-color 0.3s;
+    padding: 10px;
+    border: none;
+}
+
+.confirm-button {
+    background-color: #DB0C00;
+    color: white;
+}
+
+.cancel-button {
+    background-color: darkgray;
+    color: black;
+}
+
+.confirm-button:hover {
+    background-color: darkred;
+}
+
+.cancel-button:hover {
+    background-color: gray;
+}
+
+.logout-button {
+    background: url('/Imagenes/logout.png') no-repeat 10px center;
+    background-size: 20px 20px;
+    border: none;
+}
+
+.logout {
+    display: flex;
+    font-size: 14px;
+    align-items: center;
+    font-weight: bold;
+    margin-top: auto;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: background-color 0.3s;
+    padding: 10px;
+    gap: 5px;
+}
+
+    .logout:hover {
+        color: red;
+        background-color: rgba(255, 0, 0, 0.2);
+    }
