--- a/Vistas/Medicos/medicos_style.css
+++ b/Vistas/Medicos/medicos_style.css
@@ -13,7 +13,7 @@ body {
 
 .navbar {
     position: relative;
-    height: 100px;
+    height: 80px;
     padding: 0 32px;
     display: flex;
     justify-content: space-between;
@@ -73,26 +73,32 @@ body {
     padding: 25px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     flex: 1;
+    position: relative;
 }
 
 /*--- POP UP STYLE ----*/
 .logout-button {
-    padding-left: 35px;
-    background: url('/Imagenes/logout.png') no-repeat 10px center;
+    background: url('/Imagenes/logout.png') no-repeat 13px center;
     background-size: 20px 20px;
     font-size: 14px;
     font-weight: bold;
     border-radius: 6px;
     border: none;
     padding: 10px;
+    text-align: center;
     cursor: pointer;
-    color: black;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 150px;
+    background-color: rgba(255, 0, 0, 0.3);
+    color: red;
     transition: background-color 0.3s, color 0.3s;
 }
 
     .logout-button:hover {
-        background-color: rgba(255, 0, 0, 0.2);
-        color: red;
+        background-color: rgba(255, 0, 0, 0.4);
+
     }
 
     .logout:hover {
