--- a/Vistas/Admin/Admin_style.css
+++ b/Vistas/Admin/Admin_style.css
@@ -210,6 +210,21 @@ input[type="text"] {
         background-color: #117FBF;
     }
 
+.checkbox-inline td {
+    padding-right: 15px; 
+}
+
+.checkbox-inline input[type="checkbox"] {
+    margin-right: 3px; 
+}
+
+.radio-inline td {
+    padding-right: 15px;
+}
+
+.radio-inline input[type="radio"] {
+    margin-right: 3px;
+}
 
 /*--- POP UP STYLE ----*/
 .modalBackground {
