--- a/Vistas/Admin/Admin_style.css
+++ b/Vistas/Admin/Admin_style.css
@@ -139,7 +139,7 @@ header {
 .content-box {
     background-color: #fff;
     border-radius: 12px;
-    padding: 40px;
+    padding: 30px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     width: 100%;
     margin: 0 auto;
@@ -164,6 +164,12 @@ header {
     display: flex;
     flex-direction: column;
     flex: 1;
+}
+
+.form-label {
+    grid-column: span 2; /* si usás grid */
+    margin-bottom: 5px;
+    font-weight: bold;
 }
 
 .availability-item {
